[project]
name = "ag2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "flaml>=2.3.2",
    "numpy>=2.1.3",
    "openai>=1.54.4",
    "python-dotenv>=1.0.1",
    "termcolor>=2.5.0",
    "tiktoken>=0.8.0",
]
